--- a/contacto.html
+++ b/contacto.html
@@ -15,6 +15,11 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+
+       <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnWXJ3jI48m4Q1ZynT5Tbe1cg8_634eos&callback=initMap&libraries=&v=weekly"
+      defer
+    ></script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -102,9 +107,11 @@
             </div>
         </section>
         <!--Mapa-->
+        <div id="map"></div>
+        <!--
         <section id="mapa_contenedor" class="page-section" >
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1993.5260710011985!2d-79.89874524421953!3d-2.133665098444664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d6d43030dd60f%3A0xc692fabc9c4af35a!2sBG%20Bocaditos!5e0!3m2!1ses-419!2sec!4v1605401716444!5m2!1ses-419!2sec" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        </section>
+        </section>-->
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
@@ -133,5 +140,7 @@
         <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="js/mapa.js"></script>
+       
     </body>
 </html>
