cambios casi finales

--- a/principal.html
+++ b/principal.html
@@ -51,16 +51,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <svg viewBox="0 0 1500 400">
-                    <symbol id="s-text">
-                        <text text-anchor="middle" x="50%" y="50%">BGBOCADITOS</text>
-                    </symbol>
-                    <g class = "g-ants">
-                        <use xlink:href="#s-text" class="text-copy"></use>
-                        <use xlink:href="#s-text" class="text-copy"></use>
-                        
-                    </g>
-                </svg>
+                <div class="masthead-heading text-uppercase">BG BOCADITOS</div>
                 
             </div>
         </header>
