--- a/tutoriales.html
+++ b/tutoriales.html
@@ -62,7 +62,7 @@
                                 <iframe class="img-fluid" width="560" height="315" src="https://www.youtube.com/embed/ty_Wq8nQ634" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Como preparar dulce de tres leches</div>
+                                <div style="color:#fed136" class="portfolio-caption-heading">Como preparar dulce de tres leches</div>
                             </div>
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                                 <iframe class="img-fluid" width="560" height="315" src="https://www.youtube.com/embed/a0LCeby6fdY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Como hacer biscocho de vainilla</div>
+                                <div style="color:#fed136" class="portfolio-caption-heading">Como hacer biscocho de vainilla</div>
                             </div>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                                 <iframe class="img-fluid" width="560" height="315" src="https://www.youtube.com/embed/ga3cKGhyIOc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Cheesecake mousse de maracuyá</div>
+                                <div style="color:#fed136" class="portfolio-caption-heading">Cheesecake mousse de maracuyá</div>
                             </div>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
         <script src="assets/mail/jqBootstrapValidation.js"></script>
         <script src="assets/mail/contact_me.js"></script>
 
-    <script src="recetas.js"></script>
+    <script src="js/recetas.js"></script>
 
 
 
