--- a/catalogo.html
+++ b/catalogo.html
@@ -140,7 +140,7 @@
         <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <script src="recetas.js"></script>
+        <script src="js/recetas.js"></script>
 
 
         <script src="js/catalo.js"></script>
