--- a/Admin/paginas/dashboard.html
+++ b/Admin/paginas/dashboard.html
@@ -33,7 +33,7 @@ Coded by www.creative-tim.com
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="../assets/demo/demo.css" rel="stylesheet" />
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script src="libs/raphael-min.js"></script>
 
         <link rel="stylesheet" href="libs/morris.css">
