--- a/Admin/paginas/dashboard.html
+++ b/Admin/paginas/dashboard.html
@@ -83,7 +83,7 @@ Coded by www.creative-tim.com
           <li>
             <a href="./pasos.html">
               <i class="nc-icon nc-tile-56"></i>
-              <p>Productos</p>
+              <p>Registro</p>
             </a>
           </li>
 
