--- a/Admin/paginas/pasos.html
+++ b/Admin/paginas/pasos.html
@@ -90,6 +90,12 @@ Coded by www.creative-tim.com
               <p>Productos</p>
             </a>
           </li>
+          <li>
+            <a href="./pasos.html">
+              <i class="nc-icon nc-tile-56"></i>
+              <p>Registro</p>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
@@ -197,6 +203,10 @@ Coded by www.creative-tim.com
                         <div class="col-md-12">
                             <h3 class="font-weight-bold pl-0 my-4"><strong>Paso 1</strong></h3>
                             <div class="form-group md-form">
+                              <label for="yourName" data-error="wrong" data-success="right">Nombre de usuario</label>
+                              <input id="yourName" type="text" required="required" class="form-control validate">
+                          </div>
+                            <div class="form-group md-form">
                                 <label for="yourName" data-error="wrong" data-success="right">Nombre</label>
                                 <input id="yourName" type="text" required="required" class="form-control validate">
                             </div>
@@ -217,11 +227,11 @@ Coded by www.creative-tim.com
                         <div class="col-md-12">
                             <h3 class="font-weight-bold pl-0 my-4"><strong>Paso 2</strong></h3>
                             <div class="form-group md-form">
-                                <label for="companyName" data-error="wrong" data-success="right">Company Name</label>
+                                <label for="companyName" data-error="wrong" data-success="right">Ciudad</label>
                                 <input id="companyName" type="text" required="required" class="form-control validate">
                             </div>
                             <div class="form-group md-form mt-3">
-                                <label for="companyAddress" data-error="wrong" data-success="right">Company Address</label>
+                                <label for="companyAddress" data-error="wrong" data-success="right">País</label>
                                 <input id="companyAddress" type="text" required="required" class="form-control validate">
                             </div>
                             <button class="btn btn-indigo btn-rounded prevBtn float-left" type="button">Atrás</button>
@@ -232,9 +242,9 @@ Coded by www.creative-tim.com
                     <!-- Third Step -->
                     <div class="row setup-content" id="step-11">
                         <div class="col-md-12">
-                            <h3 class="font-weight-bold pl-0 my-4"><strong>Paso 3</strong></h3>
+                            <h3 class="font-weight-bold pl-0 my-4"><strong>Registrarse</strong></h3>
                             <button class="btn btn-indigo btn-rounded prevBtn float-left" type="button">Atrás</button>
-                            <button class="btn btn-default btn-rounded float-right" type="submit">Enviar</button>
+                            <button class="btn btn-default btn-rounded float-right" type="">Enviar</button>
                         </div>
                     </div>
           
@@ -288,7 +298,7 @@ Coded by www.creative-tim.com
    <!-- MDBootstrap Steppers Pro  -->
  <script type="text/javascript" src="js/addons-pro/steppers.min.js"></script>
  
- <script src="scr.js"></script>
+ <script src="libs/scr.js"></script>
 
 </body>
 
