--- a/Admin/paginas/tables.html
+++ b/Admin/paginas/tables.html
@@ -72,6 +72,12 @@ Coded by www.creative-tim.com
               <p>Productos</p>
             </a>
           </li>
+          <li>
+            <a href="./pasos.html">
+              <i class="nc-icon nc-tile-56"></i>
+              <p>Registro</p>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
