--- a/Admin/paginas/pasos.html
+++ b/Admin/paginas/pasos.html
@@ -215,7 +215,7 @@ Coded by www.creative-tim.com
                                 <input id="yourLastName" type="text" required="required" class="form-control validate">
                             </div>
                             <div class="form-group md-form mt-3">
-                                <label for="yourAddress" data-error="wrong" data-success="right">Dirección</label>
+                                <label for="yourAddress" data-error="wrong" data-success="right">Correo</label>
                                 <textarea id="yourAddress" type="text" required="required" rows="2" class="md-textarea validate form-control"></textarea>
                             </div>
                             <button class="btn btn-indigo btn-rounded nextBtn float-right" type="button">Siguiente</button>
@@ -242,9 +242,9 @@ Coded by www.creative-tim.com
                     <!-- Third Step -->
                     <div class="row setup-content" id="step-11">
                         <div class="col-md-12">
-                            <h3 class="font-weight-bold pl-0 my-4"><strong>Registrarse</strong></h3>
+                            <h3 class="font-weight-bold pl-0 my-4" style="text-align: center;"><strong>Registrarse</strong></h3>
                             <button class="btn btn-indigo btn-rounded prevBtn float-left" type="button">Atrás</button>
-                            <button class="btn btn-default btn-rounded float-right" type="">Enviar</button>
+                            <button class="btn btn-default btn-rounded float-right" type="button" id="enviar">Enviar</button>
                         </div>
                     </div>
           
