--- a/Admin/paginas/pasos.html
+++ b/Admin/paginas/pasos.html
@@ -215,9 +215,10 @@ Coded by www.creative-tim.com
                                 <input id="yourLastName" type="text" required="required" class="form-control validate">
                             </div>
                             <div class="form-group md-form mt-3">
-                                <label for="yourAddress" data-error="wrong" data-success="right">Correo</label>
-                                <textarea id="yourAddress" type="text" required="required" rows="2" class="md-textarea validate form-control"></textarea>
-                            </div>
+                              <label for="yourLastName" data-error="wrong" data-success="right">Correo</label>
+                              <input id="yourLastName" type="text" required="required" class="form-control validate">
+                          </div>
+                            
                             <button class="btn btn-indigo btn-rounded nextBtn float-right" type="button">Siguiente</button>
                         </div>
                     </div>
