--- a/principal.html
+++ b/principal.html
@@ -17,8 +17,8 @@
         <link href="css/styles.css" rel="stylesheet" />
 
         <!--Para la navegacion guiada-->
-        <script type="text/javascript" src ="http://usablica.github.io/intro.js/intro.js?v=060"></script>
-        <link rel="stylesheet" href="http://usablica.github.io/intro.js/introjs.css?v=060">
+        <script type="text/javascript" src ="https://usablica.github.io/intro.js/intro.js?v=060"></script>
+        <link rel="stylesheet" href="https://usablica.github.io/intro.js/introjs.css?v=060">
 
 
         
