--- a/principal.html
+++ b/principal.html
@@ -118,7 +118,7 @@
         <section class="page-section clearfix">
     		<div class="container">
       			<div class="intro">
-        			<img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="../assets/img/intro.png" alt="">
+        			<img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="../assets/img/intro.PNG" alt="">
         			<div class="intro-text left-0 text-center bg-faded p-5 rounded">
           				<p class="mb-3">
                             Realmente disfruto el proceso de hacer comida colorida y deliciosa. Pero me permito un trozo de chocolate ocasional, hoy comí un pastel. Si me apetece algo, lo tengo.
