--- a/tutoriales.html
+++ b/tutoriales.html
@@ -117,7 +117,7 @@
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a href="https://www.facebook.com/Susbocaditos" target="_BLANK" class="fa fa-facebook"></a>
                         <a href="https://www.instagram.com/bgbocaditos/?hl=es-la" target="_BLANK" class="fa fa-instagram"></a>
-                        <a href="#" target="_BLANK" class="fa fa-whatsapp"></a>
+                        <a href="https://web.whatsapp.com" target="_BLANK" class="fa fa-whatsapp"></a>
                     </div>
                     <div class="col-lg-4 text-lg-right">
                         <a class="mr-3" href="#!"></a>
