--- a/principal.html
+++ b/principal.html
@@ -165,7 +165,7 @@
                     <div class="col-lg-4 my-3 my-lg-0" data-step="4" data-intro="Aqui puedes encontrar nuestras redes sociales para ver nuestro trabajo">
                         <a href="https://www.facebook.com/Susbocaditos" target="_BLANK" class="fa fa-facebook"></a>
                         <a href="https://www.instagram.com/bgbocaditos/?hl=es-la" target="_BLANK" class="fa fa-instagram"></a>
-                        <a href="https://web.whatsapp.com" target="_BLANK" class="fa fa-whatsapp"></a>
+                        <a href="https://wa.me/+593999938016" target="_BLANK" class="fa fa-whatsapp"></a>
                     </div>
                     <div class="col-lg-4 text-lg-right">
                         <a class="mr-3" href="#!"></a>
